--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/NTU-SE2022/medical-certificate-smart-contract#readme",
   "dependencies": {
-    "erc721a": "^4.2.3",
+    "erc721": "^5.2.0",
     "ganache": "^7.5.0",
     "truffle": "^5.6.5"
   },
