--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "erc721": "^5.2.0",
     "ganache": "^7.5.0",
     "truffle": "^5.6.5",
+    "truffle-privatekey-provider": "^1.5.0",
     "web3": "^1.8.1"
   },
   "devDependencies": {
